Alterações main activity

--- a/app/src/main/res/layout/lembrete_layout.xml
+++ b/app/src/main/res/layout/lembrete_layout.xml
@@ -18,7 +18,7 @@
         android:text="TextView" />
 
     <TextView
-        android:id="@+id/txt_numero_episodio"
+        android:id="@+id/txt_numero_episodio:"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
