--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
         app:layout_constraintTop_toBottomOf="@+id/txt_nome_serie" />
 
     <TextView
-        android:id="@+id/txt_numero_episodio"
+        android:id="@+id/txt_numero_episodio:"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -53,39 +53,63 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rcl_episodios"
         android:layout_width="368dp"
-        android:layout_height="366dp"
+        android:layout_height="367dp"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_incluir" />
+        tools:layout_editor_absoluteY="149dp" />
 
     <Button
         android:id="@+id/btn_incluir"
-        android:layout_width="76dp"
+        android:layout_width="74dp"
         android:layout_height="33dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:text="Incluir"
+        app:layout_constraintBottom_toTopOf="@+id/rcl_episodios"
         app:layout_constraintEnd_toStartOf="@+id/btn_excluir"
         app:layout_constraintHorizontal_bias="0.63"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="123dp" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_numero_episodio:" />
 
     <Button
         android:id="@+id/btn_excluir"
-        android:layout_width="76dp"
+        android:layout_width="74dp"
         android:layout_height="33dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="216dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="216dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="100dp"
+        android:layout_marginRight="100dp"
         android:text="Excluir"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="123dp" />
+        app:layout_constraintBottom_toTopOf="@+id/rcl_episodios"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/txt_nome_serie"
+        android:layout_width="176dp"
+        android:layout_height="20dp"
+        tools:layout_editor_absoluteX="182dp"
+        tools:layout_editor_absoluteY="26dp" />
+
+    <TextView
+        android:id="@+id/txt_numero_temporada"
+        android:layout_width="176dp"
+        android:layout_height="16dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/txt_nome_serie"
+        tools:layout_editor_absoluteX="182dp" />
+
+    <TextView
+        android:id="@+id/txt_numero_episodio:"
+        android:layout_width="173dp"
+        android:layout_height="20dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_excluir"
+        app:layout_constraintTop_toBottomOf="@+id/txt_numero_temporada"
+        tools:layout_editor_absoluteX="184dp" />
 
 </android.support.constraint.ConstraintLayout>
